--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.viraasattechnologies.com",
+  "homepage": " https://swagagmoney.github.io/Viraasat",
   "name": "my-virasat",
   "version": "0.1.0",
   "private": false,
