--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": " https://swagagmoney.github.io/Viraasat",
-  "name": "my-virasat",
+  "homepage": "https:///www.viraasattechnologies.com",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
