--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:///www.viraasattechnologies.com",
+  "homepage": "https://www.viraasattechnologies.com",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
