--- a/package.json
+++ b/package.json
@@ -56,5 +56,17 @@
   "devDependencies": {
     "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.1"
+  },
+  "name": "my-virasat",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SwagaGmoney/Viraasat.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SwagaGmoney/Viraasat/issues"
   }
 }
